tests/ui/associated-consts/assoc-const-eq-bound-var-in-ty-not-wf.stderr
error: higher-ranked subtype error
  --> $DIR/assoc-const-eq-bound-var-in-ty-not-wf.rs:12:13
   |
LL |         K = { () }
   |             ^^^^^^

error: higher-ranked subtype error
  --> $DIR/assoc-const-eq-bound-var-in-ty-not-wf.rs:12:13
   |
LL |         K = { () }
   |             ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

